<resources>
    <string name="app_name">XYZ</string>
    <string name="producto">PRODUCTO</string>
    <string name="cantidad">Cantidad</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="moneda">Moneda</string>
    <string name="pesos">Pesos</string>
    <string name="dolares">Dolares</string>
    <string name="costo">Costo</string>
    <string name="limpiar">Limpiar</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="error_1">Digite la cantidad</string>
    <string-array name="material">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dije">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tipo">
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
</resources>
